--- a/assets/hours-location.css
+++ b/assets/hours-location.css
@@ -32,13 +32,20 @@
     font-family: 'Roboto Slab';
     padding-top: 30px;
     font-size: 25px;
-    font-weight: lighter ;
+    font-weight: lighter;
+    padding-bottom: 50px;
 }
 
 .map_holder {
     width: 100%;
-    padding-top: 50px;
+    height: 90vh;
+    overflow: hidden;
     position: relative;
+    background-color: #2F2220;
+}
+
+.map {
+    width: 100%;
 }
 
 .direction_button, .direction_button:hover {
@@ -53,15 +60,11 @@
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 30px;
+    font-size: 1em;
     border-radius: 30px;
+    font-family: "Roboto Slab";
 }
 
 .direction_button:hover {
     box-shadow: 5px 5px 5px rgba(68,68,68,0.6);
-}
-
-.map {
-    width: 100%;
-    height: 100%;
 }
