--- a/assets/styles.css
+++ b/assets/styles.css
@@ -436,3 +436,242 @@ h2{
          width: 100%;
      }
  }
+ /*gallery*/
+ *, {
+
+     box-sizing: border-box;
+ }
+ 
+ body, html {
+     scroll-behavior: smooth;
+ }
+ 
+ #top-logo {
+     display: block;
+     margin-left: auto;
+     margin-right: auto;
+     padding-top: 25px;
+}
+
+nav {
+     display: flex;
+     justify-content: center;
+}
+
+nav li {
+display: inline;
+float: left;
+list-style-type: none;
+margin-right: 3vw;
+text-transform: capitalize;
+}
+
+nav li>a {
+     text-decoration: none;
+}
+
+nav>ul>li>a {
+     text-transform: uppercase;
+     color:rgb(0, 0, 0);
+}
+
+nav>ul>li>a:hover {
+     text-decoration: underline;
+     color: #C8AE67;
+     transition: all 0.3s ease;     
+}
+ 
+
+ 
+ 
+   
+ .p1 {
+     font-family: roboto slab;
+     font-weight: bold;
+     font-size: 30px;
+     margin-top: 55px;
+     margin-left: 565px;
+     margin-bottom: 0;
+     
+ }
+
+ 
+ .p2 {
+     font-family: roboto slab;
+     font-weight: bold;
+     font-size: 22px;
+     margin-left: 115px;
+ }
+ 
+ .main {
+     justify-content: center;
+     align-items: center;
+     margin-top: 10px;
+     width: 100vw;
+     display: grid;
+     grid-template-columns: repeat(auto-fill, minmax(520px, 520px));
+     column-gap: 10px;
+     row-gap: 10px;
+     margin-bottom: 60px;
+ }
+ 
+ .main > img {
+     width: 520px;
+     height: 520px;
+     object-fit: cover;
+     object-position: center;
+ }
+ 
+ .main2 {
+     justify-content: center;
+     align-items: center;
+     margin-top: 10px;
+     width: 100vw;
+     display: grid;
+     grid-template-columns: repeat(auto-fill, minmax(520px, 1050px));
+     column-gap: 10px;
+     row-gap: 10px;
+     margin-bottom: 60px;
+ }
+ 
+ .salmon {
+     box-shadow: 0 0 20px 2px rgba(0, 0, 0, .1);
+     transition: 1s;
+ }
+ 
+ .salmon:hover {
+     transform: scale(1.04);
+     z-index: 2;
+ }
+ 
+ .mussel {
+     box-shadow: 0 0 20px 2px rgba(0, 0, 0, .1);
+     transition: 1s;
+ }
+ 
+ .mussel:hover {
+     transform: scale(1.04);
+     z-index: 2;
+ }
+ 
+ .tartar {
+     box-shadow: 0 0 20px 2px rgba(0, 0, 0, .1);
+     transition: 1s;
+ }
+ 
+ .tartar:hover {
+     transform: scale(1.04);
+     z-index: 2;
+ }
+ 
+ .fish {
+     box-shadow: 0 0 20px 2px rgba(0, 0, 0, .1);
+     transition: 1s;
+ }
+ 
+ .fish:hover {
+     transform: scale(1.04);
+     z-index: 2;
+ }
+ 
+ .caviar {
+     box-shadow: 0 0 20px 2px rgba(0, 0, 0, .1);
+     transition: 1s;
+ }
+ 
+ .caviar:hover {
+     transform: scale(1.04);
+     z-index: 2;
+ }
+ 
+ .chicken {
+     box-shadow: 0 0 20px 2px rgba(0, 0, 0, .1);
+     transition: 1s;
+ }
+ 
+ .chicken:hover {
+     transform: scale(1.04);
+     z-index: 2;
+ }
+ 
+ .cod {
+     box-shadow: 0 0 20px 2px rgba(0, 0, 0, .1);
+     transition: 1s;
+ }
+ 
+ .cod:hover {
+     transform: scale(1.04);
+     z-index: 2;
+ }
+ 
+ .pork {
+     box-shadow: 0 0 20px 2px rgba(0, 0, 0, .1);
+     transition: 1s;
+ }
+ 
+ .pork:hover {
+     transform: scale(1.04);
+     z-index: 2;
+ }
+ 
+ .image1 {
+     width: 1050px;
+     box-shadow: 0 0 20px 2px rgba(0, 0, 0, .1);
+     transition: 1s;
+ }
+ 
+ .image1:hover {
+     transform: scale(1.04);
+     z-index: 2;
+ }
+ 
+ .image2 {
+     width: 1050px;
+     box-shadow: 0 0 20px 2px rgba(0, 0, 0, .1);
+     transition: 1s;
+ }
+ 
+ .image2:hover {
+     transform: scale(1.04);
+     z-index: 2;
+ }
+ 
+ .panacotta {
+     box-shadow: 0 0 20px 2px rgba(0, 0, 0, .1);
+     transition: 1s;
+ }
+ 
+ .panacotta:hover {
+     transform: scale(1.04);
+     z-index: 2;
+ }
+ 
+ .choco {
+     box-shadow: 0 0 20px 2px rgba(0, 0, 0, .1);
+     transition: 1s;
+ }
+ 
+ .choco:hover {
+     transform: scale(1.04);
+     z-index: 2;
+ }
+ 
+ .coffee {
+     box-shadow: 0 0 20px 2px rgba(0, 0, 0, .1);
+     transition: 1s;
+ }
+ 
+ .coffee:hover {
+     transform: scale(1.04);
+     z-index: 2;
+ }
+ 
+ .chocolate {
+     box-shadow: 0 0 20px 2px rgba(0, 0, 0, .1);
+     transition: 1s;
+ }
+ 
+ .chocolate:hover {
+     transform: scale(1.04);
+     z-index: 2;
+ }
