--- a/assets/styles.css
+++ b/assets/styles.css
@@ -61,13 +61,13 @@ nav>ul>li>a:hover {
 /* main section*/
 
 .welcome {
-     font-size: 22px;
+     font-size: 20px;
      font-weight: 300;
      text-align: center;
      margin: 0 auto;
      margin-bottom: 100px;
-     padding-right: 20px;
-     padding-left: 20px;
+     padding-right: 50px;
+     padding-left: 50px;
      width: 80vw;
      padding-bottom: 50px;
      border-style: double;
@@ -88,19 +88,22 @@ h1 {
 }
 
 button {
-     background-color: #C8AE67;
+    font-size: 1rem;
+    font-weight: 300;
+     background-color: #F7F4E2;
      border-style: groove;
-     border-radius: 15px;
+     border-radius: 50px;
      height: 45px;
-     width: 180px;
+     width: 200px;
      text-transform: uppercase;
      border-color:#C8AE67;
      margin: 0 auto;
+
 }
 
 button:hover{
-     background-color: #af944b;
-     border-width: 5px;
+     background-color: #cfcaae;
+     border-width: 2px;
      transition: all 0.3s ease;
      color:black;
      cursor: pointer;
@@ -219,7 +222,7 @@ button:hover{
                      
                                 
 
-/* Grid*/
+/* Home page Grid*/
 
 .grid-container {
      display: grid;
@@ -246,24 +249,18 @@ button:hover{
 #content1 {
      grid-area: content1;
 }
-
 #content2 {
      grid-area: content2;
-
 }
-
 #content3 {
      grid-area: content3;
 }
-
 #content4 {
      grid-area: content4;
 }
-
 #content5 {
      grid-area: content5;
 }
-
 #content6 {
      grid-area: content6;
 }
@@ -330,20 +327,33 @@ button:hover{
 }
 
 #wine{
-     padding-top: 40%;
+     padding-top: 20%;
 }
 #mushroom{
-     padding-top: 30%;
+     padding-top: 20%;
      padding-left: 10%;
 }
 
 .reservations-events button{
      margin-top: 30px;
-     background-color: #2F2220;
-     color: white;
+     background-color: #C8AE67;
+     color: black;
+    border-color: #F7F4E2;
+    border-style: solid;
+    border-width: 2px;
+}
+
+.reservations-events button:hover{
+    background-color: #ad9759;
+    font-size: 1.1rem;
+    border-width: 3px;
+
 }
 #book-us{
-     margin-top:65px;
+     margin-top: 65px;
+}
+#contact-us{
+    margin-right: 300px;
 }
 
 h2{
