--- a/assets/assets/style.css
+++ b/assets/assets/style.css
@@ -80,6 +80,8 @@ nav a {
     margin-left: 115px;
 }
 
+/*nav*/
+
 .main {
     justify-content: center;
     align-items: center;
@@ -90,6 +92,7 @@ nav a {
     column-gap: 10px;
     row-gap: 10px;
     margin-bottom: 60px;
+    background-color: chartreuse;
 }
 
 .main > img {
@@ -97,19 +100,28 @@ nav a {
     height: 520px;
     object-fit: cover;
     object-position: center;
+    background-color: chartreuse;
 }
 
-.main2 {
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-    width: 100vw;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(520px, 1050px));
-    column-gap: 10px;
-    row-gap: 10px;
-    margin-bottom: 60px;
+
+.color {
+    background-color: chartreuse;
+    padding: 100px;
 }
+
+.color > div {
+    background-color: chartreuse;
+    padding: 100px;
+}
+
+.bla {
+    margin: 100px;
+}
+
+
+
+/*hovers*/
+
 
 .salmon {
     box-shadow: 0 0 20px 2px rgba(0, 0, 0, .1);
@@ -192,7 +204,6 @@ nav a {
 }
 
 .image1 {
-    width: 1050px;
     box-shadow: 0 0 20px 2px rgba(0, 0, 0, .1);
     transition: 1s;
 }
@@ -203,7 +214,6 @@ nav a {
 }
 
 .image2 {
-    width: 1050px;
     box-shadow: 0 0 20px 2px rgba(0, 0, 0, .1);
     transition: 1s;
 }
