--- a/assets/styles.css
+++ b/assets/styles.css
@@ -511,7 +511,6 @@ margin-left: 30vw;
     background-color: #ad9759;
     font-size: 1.1rem;
     border-width: 3px;
-
 }
 
 .reservations-events img{
@@ -523,14 +522,36 @@ margin-left: 30vw;
 /* Footer */
 
 .footer-container{
+    font-family: roboto;
      width: 100vw;
+     height: 60vh;
      background-color: #2F2220;
      margin:auto;
+     color:#F7F4E2;
+     text-transform: uppercase;
+     font-size: 1.2rem;
  }
- .row{
+ .footer-row{
      display:flex;
      flex-wrap:wrap;
  }
+
+ .footer-button{
+    background-color: #2F2220;
+    border: solid #F7F4E2 2px;
+    color:#F7F4E2;
+}
+
+.footer-button:hover{
+    background-color: #ad9759;
+    font-size: 1.1rem;
+    border-width: 3px;
+}
+
+.footer-container>img{
+    margin-left: 30px;
+}
+
  .footer-col ul{
      list-style-type:none;
  }
@@ -546,37 +567,31 @@ margin-left: 30vw;
      padding: 30px 0;
  }
  .footer-col{
-     width: 18%;
-     padding: 0 15px;
+     width: 22%;
+     padding: 0px 15px;
+     
  }
  .footer-col h4{
+     text-transform: uppercase;
+     font-weight: 600;
      font-size: 18px;
      margin-left: 38px;
-     text-transform: capitalize;
      color: white;
      margin-bottom:30px;
      position: relative;
  }
- .footer-col h4::before{
-      content: "";
-     position: absolute;
-     left:0;
-     bottom:-10px;
-     background-color: white;
-     height: 2px;
-     box-sizing: border-box;
-     width: 50px;
- }
+ 
  .footer-col ul li:not(:last-child){
      margin-bottom: 10px;
  }
  .footer-col ul li a{
-     font-size: 16px;
-     text-transform: capitalize;
+    font-size: 1.2rem;
+    text-transform: uppercase;
      color: white;
      text-decoration: none;
      display: block;
      transition: all 0.3s ease;
+     padding-top: 15px;
  }
  .footer ul li a:hover {
       color:white;
@@ -599,6 +614,20 @@ margin-left: 30vw;
      background-color: #C8AE67;
  }
  
+#click-here{
+    padding-top: 20px;
+}
+
+.copyright{
+    font-size: 0.7rem;
+    width: 100vw;
+    height: 30px;
+    border-top: solid 1px white;
+    text-align: center;
+    padding-bottom: 3px;
+
+}
+
  /*responsive*/
  @media(max-width: 767px){
      .footer-col {
