--- a/assets/styles.css
+++ b/assets/styles.css
@@ -44,11 +44,12 @@ nav>ul>li>a {
 
 #reservation-nav{
     font-weight: 500;
+    background-color: #C8AE67;
+    padding: 8px;
 }
 
 nav>ul>li>a:hover {
      text-decoration: underline;
-     color: #C8AE67;
      transition: all 0.3s ease;     
 }
 
@@ -77,11 +78,38 @@ nav>ul>li>a:hover {
 }
 .hero-image{
     grid-area: hero-image;
+    padding-right: 50px;
+    padding-top:60px;
 }
 
 #hero-button{
     margin-left:0;
 }
+
+/* responsive nav*/
+
+@media (max-width: 767px){
+    .hero-container{
+        display: grid;
+        height: 100vh;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        grid-template-areas: "hero-text";
+    }
+    .hero-text{
+        grid-area: hero-text;
+        padding-left: 80px;
+        padding-top: 100px;
+        width: 80%;
+    }
+    .hero-image{
+        display: none;
+    }
+    .logo{
+        padding-left: 100px;
+    }
+}
+
 
 /* Button*/
 button {
@@ -182,8 +210,7 @@ input[type="checkbox"] {
     -o-transform: scale(0.5); /* Opera */
     transform: scale(0.5);
     padding: 10px;
-   
-}
+   }
 
 label[for="terms"]{
     position: relative;
@@ -193,6 +220,54 @@ label[for="terms"]{
     margin-left: 80px;
 }
 
+@media screen and (max-width: 767px) {
+    .promotion{
+        display:grid;
+        grid-template-columns: 1fr;
+        grid-row: auto;
+        grid-template-areas: "promo-form";}
+    .promo-image{
+        display: none;}
+    input[type="submit"] {
+            background-color: #C8AE67;
+            width: 180px; 
+            height: 50px;
+            border: 1px solid #C8AE67;
+            border-radius: 50px;
+            margin-left: 30px;
+            margin-top: 20px;
+            font-size: 1.3rem;
+            text-transform: uppercase;
+        }
+    }
+
+@media screen and (max-width: 574px){
+    .promo-form{
+        grid-area: promo-form;
+        width: 100vw;
+        padding: 5px;
+        margin: 0 auto;
+        padding-top: 20px;
+    }
+
+    h2{
+        width: 300px;
+        padding-left: 30px;
+    }
+    h4{
+        width: 300px;
+        padding-left: 30px;
+    }
+    input[type="submit"] {
+        margin-left: 0 auto;
+        width: 180px; }
+    input[type="email"]{
+        margin-left: 20px;
+    }
+    input[type="checkbox"] {
+        font-size: 0.9rem;
+    }
+}
 
 /*reservation page*/
 
@@ -235,7 +310,6 @@ label[for="terms"]{
           
  .options2,.options,  nav>ul>li>a:hover {
      text-decoration: underline;
-     color: #C8AE67;
      transition: all 0.3s ease;     
 }
           
@@ -436,6 +510,16 @@ margin-left: 30vw;
      grid-area: content6;
 }
 
+@media screen and (max-width: 767px) {
+    .grid-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+        "content2" "content1"
+        "content3" "content4"
+        "content6" "content5";
+   }
+}
 
 /* history 
 
@@ -514,8 +598,26 @@ margin-left: 30vw;
 }
 
 .reservations-events img{
-    padding-left:50%;
+    padding-left:20%;
     padding-top: 20px;
+}
+
+@media(max-width: 767px){
+    .reservations-events img{
+        display: none;}
+    .reservations-events {
+         display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        grid-template-areas: "card";
+       }
+       .card {
+        padding-left: 50px;
+   }
+}
+@media(max-width: 574px){
+    .reservations-events img{
+        display: none;}
 }
 
 
@@ -524,7 +626,7 @@ margin-left: 30vw;
 .footer-container{
     font-family: roboto;
      width: 100vw;
-     height: 60vh;
+     height: fit-content;
      background-color: #2F2220;
      margin:auto;
      color:#F7F4E2;
@@ -683,7 +785,6 @@ nav>ul>li>a {
 
 nav>ul>li>a:hover {
      text-decoration: underline;
-     color: #C8AE67;
      transition: all 0.3s ease;     
 }
  
