Seo and responsiveness
Added alt atributes to images and added some media queries

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -11,29 +11,45 @@ body, html {
      height: 100%;
      width: 100vw;
      padding:0;
+     margin:0;
      box-sizing: border-box;
      font-family: 'Roboto slab', serif;
 }
 
 /* Nav*/
+
+.header-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "logo menu";
+}
+
 .logo{
-    display: block;
     width: 250px;
     margin-top: 70px;
+    margin-left: 50px;
+}
+
+.menu{
+    padding-top: 60px;
 }
 
 nav>ul{
     display: inline-block;
-    margin-left: 40%;
+    margin-left: 200px;
     margin-top: 98px;
    
+}
+
+nav ul li{
+    margin-top: 1em;
 }
 
 nav li {
 display: inline;
 float: left;
 list-style-type: none;
-margin-right: 3vw;
+margin-right: 1vw;
 text-transform: capitalize;
 }
 
@@ -43,10 +59,10 @@ nav>ul>li>a {
      color:rgb(0, 0, 0);
 }
 
-#reservation-nav{
+#reservation-cta{
     font-weight: 500;
     background-color: #C8AE67;
-    padding: 8px;
+    padding: 2px;
 }
 
 nav>ul>li>a:hover {
@@ -58,7 +74,34 @@ nav>ul>li>a:hover {
     #reservation-nav{
         margin-top: 40px;
     }
+
 }
+
+@media (max-width: 1000px){
+    .header-container{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+        "logo"
+        "menu";
+    }
+    .hero-container{
+        display: grid;
+        height: 100vh;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        grid-template-areas: 
+        "hero-image"
+        "hero-text";
+    }
+    .hero-text{
+        grid-area: hero-text;
+        padding-left: 80px;
+        padding-top: 100px;
+        width: 100%;
+    }
+}
+
 
 /* nav ends here, hero starts here*/
 
@@ -91,8 +134,10 @@ nav>ul>li>a:hover {
     padding-top:60px;
 }
 
-#hero-button{
+.hero-button{
     margin-left:0;
+    font-family: 'Roboto slab', serif;
+    font-weight: bold;
 }
 
 @media (max-width: 767px){
@@ -111,9 +156,6 @@ nav>ul>li>a:hover {
     }
     .hero-image{
         display: none;
-    }
-    .logo{
-        padding-left: 100px;
     }
 }
 
@@ -545,6 +587,7 @@ margin-right: -1vw;
 .grid-section>p {
      margin-top: 150px;
      margin-left: 160px;
+     margin-bottom: 50px;
      width: 50%;
      font-size: 33px;
      text-align: left;
@@ -574,6 +617,12 @@ margin-right: -1vw;
      grid-area: content6;
 }
 
+#menu-button{
+    margin-left: 150px;
+    font-family: 'Roboto slab', serif;
+    margin-bottom: 100px; 
+}
+
 @media screen and (max-width: 767px) {
     .grid-container {
         display: grid;
@@ -582,6 +631,10 @@ margin-right: -1vw;
         "content2" "content1"
         "content3" "content4"
         "content6" "content5";
+   }
+   .grid-section>p {
+       font-size: 28px;
+       padding-bottom: 80px;
    }
 }
 
@@ -747,18 +800,22 @@ margin-right: -1vw;
      height: 50px;
      width: 50px;
      background-color: white;
-     margin: 0 15px 20px 0;
+     margin-top: 10px;
      text-align: center ;
      line-height: 50px;
      border-radius: 50%;
      color: black;
      transition: all 0.5s ease;
+     margin-left: 40px;
  }
+
+
  .footer-col .social-links a:hover{
      color: black;
      background-color: #C8AE67;
  }
- 
+#facebook-icon{
+}
 #click-here{
     padding-top: 20px;
 }
