--- a/assets/styles.css
+++ b/assets/styles.css
@@ -725,19 +725,21 @@ margin-right: -1vw;
  }
 
  .footer-button{
-    background-color: #2F2220;
-    border: solid #F7F4E2 2px;
-    color:#F7F4E2;
+    background-color: #F7F4E2;
+    border: solid #ad9759 2px;
+    color: black;
     margin-left: 10px;
     margin-top: 8px;
+    font-family: roboto slab;
 }
 
 .footer-button-reserve{
-    background-color: #2F2220;
-    border: solid #F7F4E2 2px;
-    color:#F7F4E2;
+    background-color: #F7F4E2;
+    border: solid #ad9759 2px;
+    color: black;
     margin-left: 10px;
     margin-top: 30px;
+    font-family: roboto slab;
 }
 
 .footer-button:hover{
@@ -799,7 +801,7 @@ margin-right: -1vw;
      display: inline-block;
      height: 50px;
      width: 50px;
-     background-color: white;
+     background-color: #F7F4E2;
      margin-top: 10px;
      text-align: center ;
      line-height: 50px;
@@ -814,8 +816,7 @@ margin-right: -1vw;
      color: black;
      background-color: #C8AE67;
  }
-#facebook-icon{
-}
+
 #click-here{
     padding-top: 20px;
 }
@@ -827,6 +828,7 @@ margin-right: -1vw;
     border-top: solid 1px white;
     text-align: center;
     padding-bottom: 3px;
+    margin-top: 60px;
 
 }
 
