--- a/assets/styles.css
+++ b/assets/styles.css
@@ -20,11 +20,12 @@ body, html {
     display: block;
     width: 250px;
     margin-top: 70px;
+    margin-left: 70px;
 }
 
 nav>ul{
     display: inline-block;
-    margin-left: 40%;
+    margin-left: 35%;
     margin-top: 98px;
    
 }
